[package]
name = "tyt"
version = "1.0.2"
authors = ["joooscha <j.loos@posteo.net>"]
edition = "2018"

[dependencies]
termion = "*"
tui = "*"
clipboard = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
quick-xml = { version = "*", features = ["serialize"] }
reqwest = { version = "*", features = ["blocking"] }
chrono = "*"
dirs-next = "*"
threadpool = "*"
rand = "*"
alphanumeric-sort = "*"

# notification = { path = "./notification" }
# core = { path = "./core" }
