[package]
name = "tyt"
version = "1.0.2"
authors = ["joooscha <j.loos@posteo.net>"]
edition = "2018"

[dependencies]
termion = "1.5.6"
tui = "0.12.0"
clipboard = "0.5.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
quick-xml = { version = "0.22.0", features = ["serialize"] }
reqwest = { version = "*", features = ["blocking"] }
chrono = "0.4.19"
dirs-next = "2.0.0"
threadpool = "1.8.1"
rand = "0.8.3"
alphanumeric-sort = "1.4.1"
derive_builder = "0.10.2"

# notification = { path = "./notification" }
# core = { path = "./core" }
